--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -23,7 +23,7 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
-  oder:
+  order:
     depends_on: 
       - kafka
     image: adoptopenjdk/maven-openjdk11:latest
@@ -34,7 +34,7 @@ services:
       - 8082:8082
     working_dir: /usr/src
     volumes:
-      - ./oder:/usr/src
+      - ./order:/usr/src
       - ./maven-repo:/root/.m2
       
   delivery:
