--- a/oder/pom.xml
+++ b/oder/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>modelforops</groupId>
-	<artifactId>oder</artifactId>
+	<artifactId>order</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>oder</name>
+	<name>order</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
