--- a/oder/src/main/resources/application.yml
+++ b/oder/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: oder
+    name: order
 ---
 
 spring:
@@ -29,7 +29,7 @@ spring:
                   serde: org.apache.kafka.common.serialization.Serdes$StringSerde
       bindings:
         event-in:
-          group: oder
+          group: order
 #<<< EDA / Topic Name
           destination: modelforops
 #>>> EDA / Topic Name
@@ -74,7 +74,7 @@ spring:
                   serde: org.apache.kafka.common.serialization.Serdes$StringSerde
       bindings:
         event-in:
-          group: oder
+          group: order
           destination: modelforops
           contentType: application/json
         event-out:
