finish 클라우드 배포 - Container 운영

--- a/gateway/kubernetes/deployment.yaml
+++ b/gateway/kubernetes/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: username/gateway:latest
+          image: stam0325/gateway:20240404
           ports:
             - containerPort: 8080
